--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,4 @@
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
+<div class="main">
+  <h1>一年記念</h1>
+  <%= link_to("サプライズスタート！", "/posts/top") %>
+</div>
