--- a/app/views/posts/quiz1.html.erb
+++ b/app/views/posts/quiz1.html.erb
@@ -4,14 +4,18 @@
       <h1>Quiz 1</h1>
       <h2>問題</h2>
       <div class="text">
-        <p>こがの学籍番号の下４桁は？</p>
-        <p>一年間ずっと一緒に過ごしてきたゆいならわかって当然だよね？わかんなかったらこがくん泣いちゃいます。</p>
+        <p>こがの学籍番号は次のうちどれ？</p>
+        <p>わかんなかったらこがくん泣いちゃいます。</p>
       </div>
     </div>
     <div class="answer">
       <%= form_tag('/posts/answer1') do %>
       <p>Answer</p>
-      <input type="text" name="answer1" class="answertext">
+      <ul>
+        <li><input type="radio" name="answer" value="4009">1026 31 4009</li>
+        <li><input type="radio" name="answer" value="4007">1026 31 4007</li>
+        <li><input type="radio" name="answer" value="4010">1026 31 4010</li>
+      </ul>
       <input type="submit" value='解答'>
       <% end %>
     </div>
@@ -22,12 +26,12 @@
     <div class="love-words">
       <p>ヒント</p>
       <%= form_tag("/posts/lovewords") do %>
-      <textarea name="lovewords1" id="" cols="60" rows="3" value="a">ここにこがに対する愛の言葉を記入せよ。さすれば、何かが起こるだろう。</textarea>
+      <textarea name="lovewords1" id="" cols="60" rows="3" value="a">どうしてもわかんなかったらここにこがに対する愛の言葉を記入せよ。</textarea>
       <input type="submit">
       <% end %>
     </div>
     <div class="hint">
-    <p>時計の裏を探せ</p>
+      <p>時計の裏を探せ</p>
     </div>
   </div>
 </div>
