--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <%= image_tag '1.jpg' %>
       <h1>一年記年クイズ</h1>
-      <%= link_to "クイズスタート！", {controller: :posts, action: :top}, class: :start %>
+      <%= link_to "クイズスタート！", {controller: :posts, action: :quiz1}, class: :start %>
     </div>
   </div>
 </div>
