--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -5,5 +5,8 @@
       <h1>一年記年クイズ</h1>
       <%= link_to "クイズスタート！", {controller: :posts, action: :quiz1}, class: :start %>
     </div>
+    <h3>ルール</h3>
+    <p>不正解一回につき焼き肉一回おごり</p>
+    <p>正解したらもらえる四つの数字を覚えておくこと</p>
   </div>
 </div>
