--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -25,3 +25,11 @@ textarea{
 .hint {
   display: none;
 }
+
+.a  {
+  background-color: rgba($color: #d0622f55, $alpha: 0.5);
+  border-radius: 5px;
+  padding: 5px 15px;
+  color: #913c0bec;
+  font-weight: bold;
+}
