--- a/app/views/posts/correct3.html.erb
+++ b/app/views/posts/correct3.html.erb
@@ -4,5 +4,5 @@
 <div class="number">
   <h2>third number</h2>
   <img src="https://lh3.googleusercontent.com/proxy/LGduXl_YVI9SlJiyaKmFLQfcd5uIGKccR4GDuYPHkWaY4std1XMiDfP9jDLiD-Ygu7iJbk4EtLD5c8yU8kSlyVpXVl0ell0Ow2KqTTqZi9bmXRt583cIHwjp9gKOlsbr6T4Sth2nXB6d5g-LhJ71a0cdBLpp2CXKV59l1xIfzuZzxN7H4ag4xTrlOiyhBAdwugaUlUwvVfyqpqQKnVKjuPDc5KpNNSDWTXNQgiH98IKxtG1H1aeUAJEm98m74lU9hYT5Ky-MxQ" alt="1" height="400px">
-  <p><a href="/posts/quiz4">次の問題</a></p>
+  <p><a class="a" href="/posts/quiz4">次の問題</a></p>
 </div>
