--- a/app/views/posts/quiz1.html.erb
+++ b/app/views/posts/quiz1.html.erb
@@ -16,7 +16,7 @@
         <li><input type="radio" name="answer" value="4007">1026 31 4007</li>
         <li><input type="radio" name="answer" value="4010">1026 31 4010</li>
       </ul>
-      <input type="submit" value='解答'>
+      <input class="a" type="submit" value='解答'>
       <% end %>
     </div>
   </div>
@@ -27,7 +27,7 @@
       <p>ヒント</p>
       <%= form_tag("/posts/lovewords") do %>
       <textarea name="lovewords1" id="" cols="60" rows="3" value="a">どうしてもわかんなかったらここにこがに対する愛の言葉を記入せよ。</textarea>
-      <input type="submit">
+      <input type="submit" class="a">
       <% end %>
     </div>
     <div class="hint">
