--- a/app/views/posts/quiz2.html.erb
+++ b/app/views/posts/quiz2.html.erb
@@ -16,7 +16,7 @@
         <li><input type="radio" name="answer" value="4009">小郡市希みが丘</li>
         <li><input type="radio" name="answer" value="4010">小郡市のぞみが丘</li>
       </ul>
-      <input type="submit" value='解答'>
+      <input class="a" type="submit" value='解答'>
       <% end %>
     </div>
   </div>
@@ -27,7 +27,7 @@
       <p>ヒント</p>
       <%= form_tag("/posts/lovewords2") do %>
       <textarea name="lovewords1" id="" cols="60" rows="3" value="a">どうしてもわかんなかったらここにこがに対する愛の言葉を記入せよ。</textarea>
-      <input type="submit">
+      <input class="a" type="submit">
       <% end %>
     </div>
     <div class="hint">
