--- a/app/views/posts/quiz4.html.erb
+++ b/app/views/posts/quiz4.html.erb
@@ -16,7 +16,7 @@
         <li><input type="radio" name="answer" value="4009">ゆいちゃん大好き</li>
         <li><input type="radio" name="answer" value="4009">ゆいちゃん大好き</li>
       </ul>
-      <input type="submit" value='解答'>
+      <input class="a" type="submit" value='解答'>
       <% end %>
     </div>
   </div>
