--- a/app/views/posts/correct2.html.erb
+++ b/app/views/posts/correct2.html.erb
@@ -4,5 +4,5 @@
 <div class="number">
   <h2>second number</h2>
   <img src="https://lh3.googleusercontent.com/proxy/jUCoNJP3QrsPpxpsKC-VRIxAO2B_MfYbajwG4frHzVltKbHArESVi5Sr-jTXDDwENrpqR43IAZ1TmUrl3vEJZTIHpGjh9MLgZIC6yIHJQNconIHSZNpnozvIgS7g5II5ldjlbKOqX6LtdviKq-QFRNYjMBjdXL3Dtt0ue6IK48_eFJHqOHPoBGuAYF_tTr9C67WAXorcZE7xMgEPY3un-lIocIqfIg9Z8BP38iajvM4h9oc2Q6p3sIcH8vNIKQjTelRLFUj_CQ" alt="3" height="400px">
-  <p><a href="/posts/quiz3">次の問題</a></p>
+  <p><a class="a" href="/posts/quiz3">次の問題</a></p>
 </div>
